# BI_Storyteller

./: .env  .replit  app.py  pyproject.toml  replit.md  requirements.txt
.streamlit/: config.toml  secrets.toml
api/: main.py
attached_assets/: Pasted-treamlit-errors-StreamlitDuplicateElementId-There-are-multiple-plotly-chart-elements-with-the-same--1754031427772_1754031427773.txt
env/conda-meta/: expat-2.7.1-h313beb8_0.json  history  libffi-3.4.4-hca03da5_1.json  ncurses-6.5-hee39554_0.json  openssl-3.0.17-h4ee41c1_0.json  pip-25.1-pyhc872135_2.json  python-3.10.18-h19e8193_0.json  readline-8.2-h1a28f6b_0.json  setuptools-78.1.1-py310hca03da5_0.json  sqlite-3.50.2-h79febb2_1.json  tk-8.6.14-h6ba3021_1.json  wheel-0.45.1-py310hca03da5_0.json  xz-5.6.4-h80987f9_1.json  zlib-1.2.13-h18a0788_1.json
env/etc/: aau_token
env/lib/: libcrypto.3.dylib  libncursesw.6.dylib  libpython3.10.dylib  libtcl8.6.dylib  libtinfow.6.dylib  tclConfig.sh  tkConfig.sh
env/lib/itcl4.2.4/: itclConfig.sh
env/lib/pkgconfig/: expat.pc  formw.pc  history.pc  libcrypto.pc  libffi.pc  liblzma.pc  libssl.pc  menuw.pc  ncurses++w.pc  ncursesw.pc  openssl.pc  panelw.pc  tcl.pc  (+7 more)
modules/: AB_Tester.py  Chat.py  Data_Preprocessing.py  Presentation.py  Variables.py  data_generator.py  eda_analyzer.py  predictive_analysis.py  sentiment_analysis.py  trend_analysis.py  visualization_creator.py
pages/: 1_Variables.py  2_Questionnaire.py  3_Data_Collection.py  4_Data_Preprocessing.py  5_Analysis.py  6_Dashboard.py  7_Chat.py  7_Presentation.py
static/: style.css
template/: index.html
utils/: data_processor.py  database_client.py  form_generator.py  groq_client.py  presentation_generator.py  questionnaire_generator.py  sheets_client.py  visualizer.py
(+156 files in other folders)
