[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "groq>=0.30.0",
    "gspread>=6.2.1",
    "matplotlib>=3.10.5",
    "plotly>=6.2.0",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.42",
    "statsmodels>=0.14.5",
    "streamlit>=1.47.1",
    "textblob>=0.19.0",
]
