[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "groq>=0.30.0",
    "gspread>=6.2.1",
    "matplotlib>=3.10.5",
    "openai>=1.98.0",
    "pillow>=11.3.0",
    "plotly>=6.2.0",
    "psycopg2-binary>=2.9.10",
    "python-pptx>=1.0.2",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.42",
    "statsmodels>=0.14.5",
    "streamlit>=1.47.1",
    "textblob>=0.19.0",
]

OPENAI_API_KEY = "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"
LANGCHAIN_API_KEY = "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"
GROQ_API_KEY = "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"
HF_API = "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"
Air table = "patOj82SqIi85ZMrX.130644297b104dab043347bec6cab14250b75e290116b4ace74aeb5b1ee86304"

